content/stylesheet.css
/* Provided by Google Fonts */
* {
  font-family: 'Cabin', 'sans-serif';
}

.container {
  padding: 0;
  border: 1px solid black;
}

.row {
  margin-left: 0;
  margin-right: 0;
}

body {
  background: rgba(205, 205, 205, 1.0);
  background-size: cover;
  color: #000;
  margin-bottom: -40px;
}

/*.border1 {
  border-style: double;
  border-color: rgb(0, 116, 178);
  border-width: 8px;
}*/

/*.footer-well {
  border-radius:12px;
  background-color:#FFF;
  color:#333;
}*/

#transaction-central.well button{
  color: black;
}

#transaction-central.well input{
  color: black;
}

/*.well[id|='transaction'] { color: black; }*/

.well {
  background-color: rgba(0, 116, 178, 1.0);
  color:#FFF;
}

footer .well {
  border: none;
  padding: 19px 0px 19px 0px;
  margin-bottom: 0;
}

.well a:link { color: #FFFFFF; }

.well a:active { color: #5AC1FF; }

.well a:visited { color: #C0C0C0; }

/**
 * Donation form formatting...
 * 8 July 2014
 * -Steelio
 **/
form ol, form li {
  list-style: none;
}

form li {
  clear: both;
  margin: 0 0 .75em;
  padding: 0;
}

label {
  display: block;
  float: left;
  margin-right: 10px;
  text-align: right;
  width: 120px;
}

label:after {
  content: ':';
}

button {
  cursor: pointer;
}

li.first, li.last, li.state, li.zip {
  clear: none;
}

/* A little help from:
 * http://codepen.io/CrocoDillon/pen/kmGCw
 * For making this form responsive!
 */

@media screen and (min-width: 768px) {
  li.first, li.state {
    float: left;
    margin: 0 0 0.75em;
    padding: 0 0 0;
  }

  li.last, li.zip {
    float: left;
    margin: 0 0 0.75em;
    padding: 0 0 0;
  }

  li.last > label {
    width: 80px;
  }

  li.zip > label {
    width: 32px;
  }
}



/**
 * Some other stuff...
 *
 **/
.page {
  text-align: left;
}

#main {
  background: rgba(255, 255, 255, 1.0);
  border-radius: 5px;
}

.navbar {
  margin-bottom: 0;
  border: none;
  background-color: rgba(0, 116, 178, 1.0);
  border-radius: 4px 4px 0px 0px;
 }

#sa-cdc-navbar-collapse {
  padding-left: 130px;
  font-size: 1.5em;
}

.sa-cdc-utility {
  padding-right: 80px;
  font-size: 1em;
  text-align: right;
}

.brand {
  margin: 3px 0px 0px 0px;
  position: absolute;
  z-index: 100;
  max-height: 53px;
}

.container-fluid {
    min-height: 60px;
}

.carousel-inner > .item > img {
  margin: 0 auto;
  border-radius: 0px 0px 5px 5px;
}

img.frontpage {
  margin-right: auto;
  margin-left: auto;
  margin-top: 15px;
  margin-bottom: 15px;
  display:table-cell;
  vertical-align:middle;
  max-height: 240px;
}

h3.frontpage {
  margin: 60px 10px;
}

footer {
	margin: 240px 0px 0px 0px;
    border-radius: 4px;
    border: none;
    background-color: #0074B2;
}

/*  Attempting to fix carousel gradient */
.carousel-control.left, .carousel-control.right {
    background-image: none
}

.carousel-caption a:link { color: #FFFFFF; }

.carousel-caption a:active { color: #5AC1FF; }

.carousel-caption a:visited { color: #C0C0C0; }

.captionright {
   right: 10px;
   left: auto;
   max-width: 150px;
   border-radius: 5px;
   padding-bottom: 0px;
   bottom: 5px;
}

.captionleft {
  left: 10px;
  right: auto;
  max-width: 150px;
  border-radius: 5px;
  padding-bottom: 0px;
  bottom: 5px;
}

.captionsmallleft {
  max-width: 150px;
  top: auto;
  bottom: 45%;
  right: auto;
  left: 10px;
  }

.captionsmallright {
  max-width: 150px;
  top: auto;
  bottom: 45%;
  right: 10px;
  left: auto;
  }

.captionattributionright {
  bottom: 0;
  right: 5px;
  left: auto;
  padding-bottom: 5px;
  font-size: .5em;
}

.captionattributionleft {
  bottom: 0;
  right: auto;
  left: 5px;
  padding-bottom: 5px;
  font-size: .5em;
}

.captionblack a:link { color: #000000; }

.captionblack a:active { color: #000000; }

.captionblack a:visited { color: #000000; }

/*Trying to move pagination dots lower*/
.carousel-indicators {
  margin-bottom: 3px;
}

/*  Attempting to fix height of footer */
.demo{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

.equal {
    overflow: hidden;
}

/* Add margin to buttons by default. */
.btn {
  margin: 5px 2px 2px 2px;
}

/**
 * Adding resoponsiveness to google maps iframe
 * Credit: http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-responsive-design/
 **/
.map-container {
    position: relative;
    padding-bottom: 66%;
    height: 0;
    overflow: hidden;
}

.map-container iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}

/*Trying to fix linkedIn icon looking smaller than rest*/
/*img.linkedIn {
    margin: 11px 0px 11px 11px;
    max-width: 61px;
    max-height: 50px;
}*/

img.social-media {
    margin: 10px 10px 10px 10px;
    max-width: 50px;
    max-height: 50px;
}

.social-media {
    /*margin-top: 20px;*/
    text-align: center;
}

img.partner {
  padding: 5% 5% 5% 5%;
  margin: 0px auto;
  display:table-cell;
  vertical-align:middle;
  max-height: 160px;
}

p.partner {
  background-color: rgb(87, 82, 82);
  max-width: 356px;
  max-height: 175px;
  margin: 0px auto;
  border-radius: 5px;
}

/**
 * Vertical align image.
 **/
span.partner {
  display: inline-block;
  vertical-align: middle;
  height: 100%;
}



/*
 * Link colors, make it pop on gray background.
 */

a:link { color: #0079C1; }

a:active { color: #5AC1FF; }

a:visited { color: #0079C1; }

/*
 *  Featurettes...
 */
.bs-docs-featurette {
  padding-top:    0px;
  padding-bottom: 0px;
  font-size: 16px;
  line-height: 1.5;
  text-align: center;
  vertical-align top;
}
.bs-docs-featurette + .bs-docs-footer {
  margin-top: 0;
  border-top: 0;
}

.bs-docs-featurette-title {
  /*font-size: 30px;*/
  font-weight: normal;
  color: #000;
  margin: 30px 10px;
}
.half-rule {
  width: 100px;
  margin: 40px auto;
  border: 0;
  height: 1px;
  background: #333;
  background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
  background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);
  background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);
  background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
}

.bs-docs-featurette ul, ol {
  text-align: left;
}
.bs-docs-featurette-img {
  display: block;
  border-radius: 5px;
  margin: 0 auto;
  margin-bottom: 20px;
  color: #333;
}
.bs-docs-featurette-img:hover {
  text-decoration: none;
  color: #428bca;
}
.bs-docs-featurette-img img {
  display: block;
  margin-bottom: 15px;
}

h4.carousel {
  opacity: 0;
}

h3.carousel {
  margin-top: 3px;
  color: #FFF;
  opacity: 0;
}

.carousel-caption-ctr {
  bottom: none;
  top: 25%;
}

.floattext {
  opacity: 0;
  font-size: 3em;
}

a.floattext:hover {
  color: #FFF;
  text-decoration: none;
  opacity: 1;
}

.blackground {
  background-color: #d3d3d3;
  padding: 20px;
  border-radius: 5px;
  border-style: solid;
  border-color: black;
  border-width: 5px;
}

.story {
  margin-top: 60px;
}

@media (min-width: 480px) {
  .bs-docs-featurette {
    padding-top: 0px;
    padding-bottom: 0px;
  }
  .captionleft {
    max-width: 20%;
    top: auto;
    bottom: 20%;
    right: auto;
    left: 20%;
  }
  .captionright {
    max-width: 20%;
    top: auto;
    bottom: 20%;
    right: 20%;
    left: auto;
  }

  .captionsmallleft {
    max-width: 20%;
    top: auto;
    bottom: 45%;
    right: auto;
    left: 20%;
    }

  .captionsmallright {
    max-width: 20%;
    top: auto;
    bottom: 45%;
    right: 20%;
    left: auto;
    }

  .brand {
    max-height: 75px;
  }
  .container-fluid {
    min-height: 80px;
  }
}

@media (min-width: 768px) {
  .bs-docs-featurette {
    padding-top:    0px;
    padding-bottom: 0px;
  }
  .bs-docs-featurette-title {
    font-size: 40px;
  }
  .bs-docs-featurette .lead {
    margin-left:  auto;
    margin-right: auto;
    max-width: 80%;
  }
  .bs-docs-featured-sites .col-sm-3:first-child img {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
  }
  .bs-docs-featured-sites .col-sm-3:last-child img {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
  }

  .bs-docs-featurette .img-responsive {
    margin-top: 0;
  }

  .captionleft {
    max-width: 250px;
    top: auto;
    bottom: 125px;
    right: 400px;
    left: auto;
  }
  .captionright {
    max-width: 250px;
    top: auto;
    bottom: 125px;
    right: auto;
    left: 400px;
  }
  .captionsmallleft {
    opacity: 0;
    right: 0;
    left: auto;
    }

  .captionsmallright {
    opacity: 0;
    right: auto;
    left: 0;
    }
  /* Applies to the navigation bar to make the active list flush with the bottom */
  /* TODO: set text-color of dropdown menu to white when in hamburger mode */
  .navbar-default .navbar-nav>li>a {
    color: #fff;
    padding-top: 25px;
    height: 80px;
  }
  h4.carousel {
    opacity: 1;
  }
  h3.carousel {
    opacity: 1;
  }
}

@media (min-width: 992px) {
  .captionleft {
    max-width: 450px;
    top: auto;
    bottom: 200px;
    right: 550px;
    left: 25px;
  }
  .captionright {
    max-width: 450px;
    top: auto;
    bottom: 200px;
    right: 25px;
    left: 550px;
  }

  .tinted {
    opacity: 0.5;
  }

  .tinted:hover {
    opacity: 1;
  }

}

@media (min-width: 1200px) {
  .captionleft {
    max-width: 450px;
    top: auto;
    bottom: 300px;
    right: 650px;
    left: auto;
  }
  .captionright {
    max-width: 450px;
    top: auto;
    bottom: 300px;
    right: auto;
    left: 650px;
  }
}

